# pdf_toolbox

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  AGENT.md  AGENTS.md  CONTRIBUTING.md  DEVELOPMENT.md  DEVELOPMENT_EXCEPTIONS.md  LICENSE  README.md  common_utils.py  conftest.py  coverage.json  optimize.py  page_extract.py  pdf_toolbox.spec  pdf_toolbox_gui.py  pptx_export.py  pyproject.toml  rasterize.py  repair.py  to_jpegs.py  to_pngs.py  to_tiff.py  to_word.py  unlock.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  coverage.yml  release.yml
ISSUE_TEMPLATE/: config.yml
docs/: exception_refactor_plan.md
docs/adr/: 0001-pptx-provider-architecture.md  README.md
scripts/: AGENTS.md  __init__.py  check_coverage.py  check_exceptions.py  check_lint_exceptions.py  check_locales.py  format_locales.py  generate_exception_overview.py  get-coderabbit-comments.sh  get_coderabbit_comments.py  get_version.py  github_client.py  pin_actions.py  prune_releases.py  run_pip_audit.py
scripts/ci/: install-qt-headless.sh
src/pdf_toolbox/: AGENTS.md  __init__.py  __main__.py  _fitz.py  actions.py  cli.py  config.py  docx.py  extract.py  gui.py  i18n.py  image_utils.py  images.py  jpeg.py  miro.py  optimize.py  paths.py  pdf_pptx.py  png.py  pptx.py  rasterize.py  repair.py  tiff.py  unlock.py  utils.py  validation.py
src/pdf_toolbox/actions/: __init__.py  docx.py  extract.py  images.py  miro.py  ocr.py  optimise.py  pdf_images.py  pptx.py  unlock.py
src/pdf_toolbox/builtin/: __init__.py  docx.py  extract.py  images.py  optimise.py  optimize.py  repair.py  unlock.py
src/pdf_toolbox/gui/: __init__.py  __main__.py  config.py  error_formatter.py  form_builder.py  main_window.py  widgets.py  worker.py
src/pdf_toolbox/locales/: __init__.py  de.json  en.json
src/pdf_toolbox/renderers/: __init__.py  _http_util.py  _requests.py  _requests_types.py  http_office.py  lightweight_stub.py  ms_office.py  pptx.py  pptx_base.py  registry.py
tests/: AGENTS.md  __init__.py  conftest.py  test_actions.py  test_actions_e2e.py  test_actions_registry.py  test_actions_security.py  test_batch_optimise.py  test_batch_optimize.py  test_cli.py  test_common_utils.py  test_config_cache.py  test_config_module.py  test_converters.py  test_entrypoint.py  test_extract.py  test_github_client.py  test_gui.py  test_gui_import.py  test_gui_smoke.py  test_i18n_autodetect.py  test_i18n_errors.py  test_i18n_fallback.py  test_i18n_integrity.py  test_image_utils.py  test_images.py  test_miro.py  test_no_relative_imports.py  test_ocr.py  test_optimise.py  test_optimise_extra.py  test_optimise_progress.py  test_optimize.py  test_optimize_extra.py  test_optimize_progress.py  test_paths_validation.py  test_pdf_images_coverage.py  test_pdf_pptx.py  test_pin_actions.py  test_pptx.py  (+11 more)
tests/gui/: AGENTS.md  conftest_qt.py  test_e2e_pdf_images.py  test_main_entry.py  test_main_window.py  test_settings_persistence.py  test_smoke_boot.py  test_widgets.py  test_worker.py
tests/renderers/: test_http_office.py  test_lightweight_stub.py  test_requests_helper.py
typings/fitz/: __init__.pyi
