[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-toolbox"
version = "0.5.2"
description = "Utilities for PDF operations"
requires-python = ">=3.13"
dependencies = [
  "PySide6>=6.7",
  "pillow",
  "pymupdf>=1.24",
  "python-docx",
  "platformdirs",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "mypy",
  "pre-commit",
  "mdformat",
  "mdformat-gfm",
  "language-formatters-pre-commit-hooks",
  "build",
  "coverage",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
extend-select = [
  "W",
  "B",
  "UP",
  "N",
  "I",
  "A",
  "C4",
  "RET",
  "SIM",
  "TID252",
  "RUF",
  "D",
  "S",
  "PL",
]
extend-ignore = ["E402", "D203", "D213"]

[tool.mypy]
ignore_missing_imports = true
exclude = ["build/"]

[tool.coverage.run]
source = ["pdf_toolbox"]
omit = ["*/pdf_toolbox/gui.py"]

[tool.coverage.report]
show_missing = true
fail_under = 95

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR2004", "D103", "D100", "PLC0415", "S106"]
"scripts/check_coverage.py" = ["S314"]
