[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-toolbox"
version = "0.6.20"
description = "Utilities for PDF operations"
requires-python = ">=3.13"
dependencies = [
  "PySide6>=6.7",
  "pillow",
  "pymupdf>=1.24",
  "python-pptx",
  "platformdirs",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov",
  "pytest-xdist>=3",
  "pytest-timeout>=2.3",
  "pytest-json-report>=1.5",
  "ruff",
  "mypy",
  "pre-commit",
  "mdformat",
  "mdformat-gfm",
  "language-formatters-pre-commit-hooks",
  "build",
  "coverage",
  "coverage-badge",
  "bandit",
]
pptx-render = ["pywin32>=306"]

[project.entry-points."pdf_toolbox.pptx_renderers"]
ms_office = "pdf_toolbox.renderers.ms_office:PptxMsOfficeRenderer"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pdf_toolbox.locales" = ["*.json"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
extend-select = [
  "W",
  "B",
  "UP",
  "N",
  "I",
  "A",
  "C4",
  "RET",
  "SIM",
  "TID251",
  "TID252",
  "RUF",
  "D",
  "S",
  "PL",
  "FURB",
  "TRY",
  "PTH",
  "ARG",
  "T20",
  "PT",
]
extend-ignore = ["D203", "D213"]


[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
ignore_missing_imports = true
exclude = ["build/"]

[tool.coverage.run]
source = ["pdf_toolbox"]
omit = [
  # Exclude GUI-only modules but keep headless helpers covered
  "*/pdf_toolbox/gui/main_window.py",
  "*/pdf_toolbox/gui/widgets.py",
  "*/pdf_toolbox/gui/worker.py",
  "*/pdf_toolbox/gui/dialogs.py",
  "*/pdf_toolbox/gui/__init__.py",
  "*/pdf_toolbox/gui/__main__.py",
  "*/pdf_toolbox/__main__.py",
  "*/pdf_toolbox/renderers/ms_office.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 95

[tool.pytest.ini_options]
addopts = "-q --durations=0 --durations-min=0.75"
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
slow_threshold = "0.75"
fail_on_unmarked_slow = "true"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR2004", "D103", "D100", "PLC0415", "S106"]
"scripts/check_coverage.py" = ["S314"]
