[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-toolbox"
version = "0.9.1"
description = "Utilities for PDF operations"
requires-python = ">=3.13, <3.15"
license = {file = "LICENSE"}
classifiers = [
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "PySide6>=6.9.2",
  "pillow>=11.3.0",
  "pytesseract>=0.3.13",
  "pymupdf>=1.26.4",
  "python-pptx>=1.0.2",
  "platformdirs>=4.4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.1",
  "pytest-cov>=7.0.0",
  "pytest-qt>=4.5.0",
  "pytest-xdist>=3.8.0",
  "pytest-timeout>=2.4.0",
  "pytest-json-report>=1.5.0",
  "requests>=2.32.5",
  "ruff>=0.12.11",
  "mypy>=1.17.1",
  "pre-commit>=4.3.0",
  "mdformat>=0.7.22",
  "mdformat-gfm>=0.4.1",
  "language-formatters-pre-commit-hooks>=2.15.0",
  "build>=1.3.0",
  "coverage>=7.10.7",
  "coverage-badge>=1.1.2",
  "bandit>=1.8.6",
  "types-requests>=2.32.0.20240914",
]
pptx_http = ["requests>=2.32.5"]
pptx-render = ["pywin32>=311; sys_platform = = 'win32'"]

[project.scripts]
pdf-toolbox = "pdf_toolbox.cli:main"

[project.entry-points."pdf_toolbox.pptx_renderers"]
http_office = "pdf_toolbox.renderers.http_office:PptxHttpOfficeRenderer"
ms_office = "pdf_toolbox.renderers.ms_office:PptxMsOfficeRenderer"

[tool.setuptools]
package-dir = {"" = "src"}
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pdf_toolbox.locales" = ["*.json"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
extend-select = [
  "W",
  "B",
  "C90",
  "UP",
  "N",
  "I",
  "A",
  "C4",
  "RET",
  "SIM",
  "TID251",
  "TID252",
  "RUF",
  "D",
  "S",
  "PL",
  "FURB",
  "TRY",
  "PTH",
  "ARG",
  "T20",
  "PT",
]
extend-ignore = ["D203", "D213"]


[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
ignore_missing_imports = true
exclude = ["build/"]
mypy_path = ["typings"]
python_version = "3.13"
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
disallow_incomplete_defs = true

[tool.coverage.run]
source = ["pdf_toolbox"]
omit = []

[tool.coverage.report]
show_missing = true
fail_under = 95

[tool.pytest.ini_options]
addopts = "-q --durations = 0 --durations-min = 0.75"
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "gui: marks GUI tests (run with '-m gui')",
  "qt_noop: tests that simulate Qt being unavailable",
]
slow_threshold = 0.75
fail_on_unmarked_slow = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR2004", "D103", "D100", "PLC0415", "S106"]
"scripts/check_coverage.py" = ["S314"]
"src/pdf_toolbox/actions/ocr.py" = ["PLR0913", "PLC0415"]
